[service-provider] integrate into build